Right align for language picker; Fix for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,9 @@
     top: 0rem;
     background-image: url(../img/background.jpg);
 }
+@media screen and (max-width: 768px){
+  .sidebar{
+    position: relative!important;
+    padding: unset;
+  }
+}
